ghc/compiler/tests/typecheck/should_fail/tcfail055.hs

f x = (x + 1 :: Int) :: Float
